--- a/static/landing_page.css
+++ b/static/landing_page.css
@@ -3,6 +3,7 @@ html {
 }
 
 .navbar {
+    height: 70px;
     box-shadow: 0 2px 5px rgba(0,0,0,.1);
 }
 .footer {
@@ -37,21 +38,29 @@ margin-top: 60px;
      border: 1px solid rgba(255, 255, 255, .25);
     border-radius: 20px;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-    transition: border .2s ease-in-out;
+    transition: all .1s ease-in-out;
    
   }
   .card-1:hover{
     border:3px solid #333;
+    
+  }
+  .card-main-content{
+    margin-top: -50px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
   }
   .card-cotainer-1 {
-    margin: 200px; 
+    margin: 30px; 
+    padding: 30px;
     display: flex;
     justify-content: space-around;
     
 }
-.card-image-1 img{
+ .card-image-1 img{
     width: 100%;
-    padding: 1px;
+    padding: 3px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     transition: filter 0.9s ease;
@@ -115,3 +124,109 @@ i:hover{
 .lead-card-btn-h1{
     margin-bottom:40px;
 }
+
+/**----------responsive-------*/
+@media  (max-width: 1200px){
+    .card-1{
+        border:3px solid #333;
+        
+      }
+      .card-image-11 img{
+        width: 100%;
+        height: 220px;
+    }
+    .card-cotainer-1{
+        margin: 2px;
+    }
+    .card-cotainer-1 .card-1{
+        width: 470px; ;
+       margin: 10px;
+    }
+    .card-cotainer-1 .card-content{
+        margin: 10px;
+    }
+}
+@media  (max-width: 1024px){
+    .card-1{
+        border:3px solid #333;
+        
+      }
+      .card-image-11 img{
+        width: 100%;
+        height: 220px;
+    }
+    .card-cotainer-1{
+        margin: 2px;
+    }
+    .card-cotainer-1 .card-1{
+        width: 470px; ;
+       margin: 10px;
+    }
+    .card-cotainer-1 .card-content{
+        margin: 10px;
+    }
+}
+
+@media  (max-width: 860px) {
+    .card-main-content{
+        padding: 0px;
+    }
+    .card-cotainer-1{
+        margin: 0px;
+        
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+       
+       
+    } 
+    .card-cotainer-1 .card-content{
+        width: 450px;
+        
+    }
+    .card-image-11 img{
+        width: 100%;
+        height: 240px;
+    }
+    .card-container-11{
+        flex-direction: column-reverse;
+    }
+    .card-container-3{
+        flex-direction: column-reverse;
+    }
+
+    .card-content{
+        width: 400px;
+        margin-top: 30px;
+        
+    }
+    
+    
+  }
+  @media  (max-width: 480px){
+    .card-cotainer-1 .card-1{
+        width: 300px;
+    }
+    .card-cotainer-1 .card-content{
+        
+        margin-left: 20px;
+    }
+    
+  }
+  @media  (max-width: 440px){
+    
+    .card-cotainer-1 .card-content{
+        width: 400px;
+        
+    }
+    .popup-content{
+        width: 400px; 
+    }
+  }
+  @media  (max-width: 400px){
+    
+    .card-cotainer-1 .card-content{
+        width: 300px;
+        
+    }
+  }
