--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -44,13 +44,13 @@
 
     
         <!-------------card1-------------------->
-
-        <div class="card-cotainer-1">
+    <div class="card-main-content">
+        <div class="card-cotainer-1 card-container-11">
 
            
             <div class="card-1">
                 <div class="card-image-1">
-                    <img src="../static/BGimage/legal_assistance.png" alt="">
+                    <img style="height: 240px;"  src="../static/BGimage/legal_assistance.png" alt="">
                 </div>
                 <div class="card-image-content">
                     <h4>Legal Assistance</h4>
@@ -69,7 +69,7 @@
 
         <!-------------card2-------------------->
 
-        <div class="card-cotainer-1">
+        <div class="card-cotainer-1 ">
 
            
             <div class="card-content">
@@ -80,7 +80,7 @@
 
             <div class="card-1">
                 <div class="card-image-1">
-                    <img src="../static/BGimage/image_gen.png" alt="">
+                    <img style="height: 240px;" src="../static/BGimage/image_gen.png" alt="">
                 </div>
                 <div class="card-image-content">
                     <h4>Image Generation</h4>
@@ -95,12 +95,12 @@
         </div>
 
          <!-------------card3-------------------->
-        <div class="card-cotainer-1">
+        <div class="card-cotainer-1 card-container-3">
 
            
             <div class="card-1">
                 <div class="card-image-1">
-                    <img src="../static/BGimage/audio_trans.png" alt="">
+                    <img  style="height: 240px;" src="../static/BGimage/audio_trans.png" alt="">
                 </div>
                 <div class="card-image-content">
                     <h4>Audio Transcript</h4>
@@ -119,7 +119,7 @@
 
          <!-------------card4-------------------->
 
-         <div class="card-cotainer-1">
+         <div class="card-cotainer-1 ">
 
            
             <div class="card-content">
@@ -129,7 +129,7 @@
             </div>
 
             <div class="card-1">
-                <div class="card-image-1">
+                <div class="card-image-1 card-image-11">
                     <img src="../static/BGimage/landing_page.jpg" alt="">
                 </div>
                 <div class="card-image-content">
@@ -142,6 +142,8 @@
             </div>
 
         </div>
+
+    </div>
 
         <!-------popup---------->
         <div class="popup">
