--- a/static/chatbot_styles.css
+++ b/static/chatbot_styles.css
@@ -1,6 +1,9 @@
 body {
     background-color: #f4f7f6;
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+   
 }
 
 #header h1 {
@@ -11,19 +14,28 @@ body {
     color: #007bff;
     font-size: 24px;
 }
+.container{
+    height: 64vh;
+}
 
 #chat-container {
     background-color: #fff;
+    height: 100%;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.6);
+    border: 2px solid #ffffff;
+    display: flex;
+    flex-direction: column;
+   
+
 }
 
 #chat {
-    height: 300px;
-    overflow-y: auto;
-    padding: 15px;
-    border-bottom: 1px solid #eee;
+    flex-grow: 1;
+    overflow-y: auto; 
+    padding: 10px; 
 }
 
 .message {
@@ -37,7 +49,7 @@ body {
 }
 
 .user-message {
-    background-color: #007bff;
+    background-color: #333;
     color: white;
     text-align: right;
     float: right;
@@ -46,7 +58,7 @@ body {
 
 .ai-message {
     background-color: #e9ecef;
-    color: black;
+    color: #333;
     text-align: left;
     float: left;
     clear: both;
@@ -60,10 +72,16 @@ body {
 
 #user-input-container {
     padding: 15px;
+   
+    margin-top: auto;
+    
+    
 }
 
 #user-input {
-    border-radius: 20px;
+   border-top-left-radius: 20px;
+   border-bottom-left-radius: 20px;
+
     box-shadow: none;
     border-color: #007bff;
 }
@@ -71,11 +89,22 @@ body {
 .btn-primary {
     background-color: #007bff;
     border-color: #007bff;
+    margin-right: 5px;
+    border-top-right-radius: 20px;
+   border-bottom-right-radius: 20px;
+    
 }
 
-#footer {
-    color: #666;
-    font-size: 0.8em;
+ #footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
     text-align: center;
-    padding: 15px 0;
+    padding: 10px 0;
+  
 }
+
+
