--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -26,14 +26,20 @@
                 <input type="text" id="user-input" class="form-control" placeholder="Type your message..." autofocus>
                 <div class="input-group-append">
                     <button id="send-button" type="button" class="btn btn-primary">Send</button>
+                    <button id="clear-button" type="button" class="btn btn-primary">Clear</button>
                 </div>
             </div>
         </div>
 
+        
+    </div>
+
+    <footer class="chat-assistant-footer">
         <div id="footer" class="text-center mt-4">
             &copy; This bot is powered by OpenAI API key | This bot may produce inaccurate information about people, places, or facts. Please contact a qualified individual for better legal advice.| 2023 | CONTACT: RAKESH H R (TECHNICAL SUPPORT API ISSUE)
+
         </div>
-    </div>
+    </footer>
 
     <!-- Bootstrap JS and Popper.js (Optional) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -48,6 +54,18 @@
                 event.preventDefault();
                 document.getElementById('send-button').click();
             }
+        });
+
+        document.addEventListener("DOMContentLoaded", function() {
+            var inputText = document.getElementById("user-input");
+            var chatContainer = document.getElementById("chat");
+            var clearButton = document.getElementById("clear-button");
+
+         
+            clearButton.addEventListener("click", function() {
+                inputText.value = "";
+                chatContainer.innerHTML = "";
+            });
         });
     </script>
 </body>
