added new folders for js and css

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -40,7 +40,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Your custom script -->
-    <script src="../static/chatbot_script.js"></script>
+   
+    <script src="{{ url_for('static', filename='js/chatbot_script.js') }}"></script>
 	<script>
         // Add Enter key functionality to send message
         document.getElementById('user-input').addEventListener('keypress', function(event) {
