--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <!--<link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">--->
-   <link rel="stylesheet" href="/static/home.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+  
     <title>Home</title>
     
 </head>
