--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -6,7 +6,7 @@
     <title>GenAI Landing Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='landing_page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/landing_page.css') }}">
     
     
 </head>
@@ -170,7 +170,7 @@
         </div>
     </footer>
     
-	<script src="{{ url_for('static', filename='landing_page.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/landing_page.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
