--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="../static/chatbot_styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/chatbot_styles.css">
 </head>
 <body>
     <div class="container">
@@ -16,7 +16,7 @@
 		
         
         <div class="text-center logo mb-4">
-            <img src="./static/logo.png" alt="" class="img-fluid">
+            
             <h1>LEGAL ASSISTANCE</h1>
         </div>
         
