--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -36,7 +36,7 @@
 
     <footer class="chat-assistant-footer">
         <div id="footer" class="text-center mt-4">
-            &copy; This bot is powered by OpenAI API key | This bot may produce inaccurate information about people, places, or facts. Please contact a qualified individual for better legal advice.| 2023 | CONTACT: RAKESH H R (TECHNICAL SUPPORT API ISSUE)
+            &copy; This bot is powered by OpenAI API key | This bot may produce inaccurate information about people, places, or facts. Please contact a qualified individual for better legal advice.| 2024 |
 
         </div>
     </footer>
