--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -23,6 +23,9 @@
                         <a class="nav-link" href="/about_us">About Us</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/image_gen">Image Generation</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/home">Home page</a>
                     </li>
                     <li class="nav-item">
