--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -6,7 +6,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="../static/css/chatbot_styles.css">
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/chatbot_styles.css') }}">
 </head>
 <body>
     <div class="container">
