modified href links

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,17 +21,20 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/chatbot">
+                        <!--a class="nav-link" href="/chatbot"-->
+                        <a class="nav-link" href="#" >
                             <i class="fa fa-comments feature-icon"></i>Chatbot
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/image_generation">
+                        <!-- a class="nav-link" href="/image_generation"-->
+                            <a class="nav-link" href="#" >
                             <i class="fa fa-paint-brush feature-icon"></i>Image Generation
                         </a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link" href="/audio_transcript">
+                        <!-- a class="nav-link" href="/audio_transcript" -->
+                            <a class="nav-link" href="#" >
                             <i class="fa-regular fa-microphone"></i>Audio Transcrip
                         </a>
                     </li>
