update about us page

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -45,7 +45,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/landing_page">GenAI</a>
+            <a class="navbar-brand" href="/home">GenAI</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,16 +60,16 @@
                 <!-- Card for Front-end UI Designer -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="./static/front.png" alt="Front-end Designer" class="profile-image card-img-top">
+                        <img src="./static/logo.png" alt="Front-end Designer" class="profile-image card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Siddartha R</h5>
-                            <p class="card-text">Front-end UI Designer</div>
+                            <p class="card-text">Front-end Developer and  UI Designer</div>
                     </div>
                 </div>
                 <!-- Card for Back-end ML Model Designer -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="./static/back.png" alt="Back-end ML Designer" class="profile-image card-img-top">
+                        <img src="./static/logo.png" alt="Back-end ML Designer" class="profile-image card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Rakesh H R</h5>
                             <p class="card-text">Back-end Developer and ML Model Designer</div>
