nav href link removed working on card

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,13 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/chatbot">
+                        <a class="nav-link" href="#">
                         
                             <i class="fa fa-comments feature-icon"></i>Chatbot
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/image_gen">
+                        <a class="nav-link" href="#">
                             
                             <i class="fa fa-paint-brush feature-icon"></i>Image Generation
                         </a>
@@ -94,7 +94,7 @@
                 <div class="card-image-content">
                     <h4>Legal Assistance</h4>
                     <p class="lead-card-btn">
-                        <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
+                        <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Chat Bot</a>
                     </p>
 
                 </div>
@@ -124,7 +124,7 @@
                 <div class="card-image-content">
                     <h4>Image Generation</h4>
                     <p class="lead-card-btn">
-                        <a href="#" class="btn btn-lg btn-secondary " id="card-1-btn-2" >Learn More</a>
+                        <a href="image_gen" class="btn btn-lg btn-secondary " id="card-1-btn-2" >Image Gen</a>
                     </p>
 
                 </div>
