--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -22,12 +22,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about_us">About Us</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about_us1">New About Us</a>
+                    </li>
+                    
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="/home">Home page</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup">Sign Up</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +61,7 @@
                 <div class="card-image-content">
                     <h4>Legal Assistance</h4>
                     <p class="lead-card-btn">
-                        <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
+                        <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
                     </p>
 
                 </div>
