--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -59,7 +59,7 @@
                 <div class="card-image-content">
                     <h4>Legal Assistance</h4>
                     <p class="lead-card-btn">
-                        <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
+                        <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
                     </p>
 
                 </div>
