landing page updated

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -68,7 +68,9 @@
             </div>
             <div class="card-content">
                 <h1>Legal Assistance</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
+                <p>Legal assistance AI chat assistance provides users with quick and reliable support for various legal inquiries.
+                    These AI systems can offer guidance on matters such as  general legal advice. Users can interact with the AI chatbot in a conversational manner, receiving answers to their legal questions in a timely and efficient manner. 
+                    This technology aims to make legal information more accessible and empower individuals to make informed decisions about their legal rights and responsibilities.</p>
                
             </div>
         </div>
@@ -80,7 +82,11 @@
            
             <div class="card-content">
                 <h1>Image Generation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
+                <p>Image generation refers to the process of creating visual content. It encompasses various techniques ranging 
+                    from traditional digital art to cutting-edge deep learning models such as Generative Adversarial Networks (GANs) 
+                    and Variational Autoencoders (VAEs). These methods enable the generation of realistic images from scratch,
+                     mimicking the style and characteristics of existing data or even producing entirely novel visual content. 
+                     </p>
                 
             </div>
 
@@ -118,7 +124,11 @@
             </div>
             <div class="card-content">
                 <h1>Audio Transcript</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
+                <p>Audio transcript AI, powered by cutting-edge natural language processing algorithms, 
+                    transforms spoken language into written text with remarkable accuracy and efficiency. 
+                    This technology enables organizations to transcribe vast amounts of audio data rapidly, facilitating easier data analysis,
+                     content indexing, and accessibility improvements. From transcribing meetings and interviews to converting podcasts and lectures into searchable text archives, audio transcript AI streamlines workflows and enhances productivity across various industries. Moreover, its capabilities extend to real-time transcription, facilitating live captioning for events, broadcasts, and conferences, 
+                    thereby ensuring greater accessibility and inclusivity for diverse audiences.</p>
                 
             </div>
         </div>
@@ -130,7 +140,13 @@
            
             <div class="card-content">
                 <h1>AI Voice Over Bytes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
+                <p>AI voice with image caption generation combines the power of natural 
+                    language processing and computer vision to create a seamless interaction between auditory and visual information.
+                     By leveragingAI systems can not only recognize and describe the contents of images but also 
+                     generate accurate and contextually relevant captions. This technology has broad applications,to enhancing user experiences in
+                    social media platforms and e-commerce websites. It represents a significant step towards bridging the gap between 
+                       human communication modalities, offering a more inclusive and intuitive way to engage with digital content.</p>
+                    
                 
             </div>
 
