imagesin about us

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -23,6 +23,10 @@
             background: linear-gradient(to right, #2980b9, #82ccdd, #8e44ad, #2ecc71);
              background-size: 500% 100%;
             animation: gradient 10s linear infinite;
+            text-align: center;
+        }
+        .profile-image{
+            width: 20%;
         }
         .container{
             display: flex;
@@ -63,6 +67,10 @@
             max-width: 50%; /* Make sure the image is responsive */
             border-radius: 50%; /* Circular image */
             margin-bottom: 20px;
+            display: block; 
+            margin:10px auto 0 auto ;
+            outline: 2px solid white;
+            border: 1px solid black;
         }
         #typing-text::after {
             content: '|'; /* Add cursor */
@@ -133,7 +141,7 @@
                 <!-- Card for Front-end UI Designer -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img  src="/static/BGimage/logo.png" alt="Front-end Designer" class="profile-image card-img-top">
+                        <img  src="/static/BGimage/sidimage.png" alt="Front-end Designer" class="profile-image card-img-top"  >
                         <div class="card-body">
                             <h5 class="card-title">Siddartha R</h5>
                             <p class="card-text">Front-end Developer and  UI Designer </p>
@@ -145,11 +153,11 @@
                 <!-- Card for Back-end ML Model Designer -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="/static/BGimage/logo.png" alt="Back-end ML Designer" class="profile-image card-img-top">
+                        <img src="/static/BGimage/rakesh.jpg" alt="Back-end ML Designer" class="profile-image card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Rakesh H R</h5>
                             <p class="card-text">Back-end Developer and ML Model Designer</p>
-                            <p class="card-text-hidden" >siddarthsiddu@gmail.com // 7892322456</p>
+                            <p class="card-text-hidden" >mandyarakesh23@gmail.com // 6363514920</p>
 
                             </div>
                     </div>
