--- a/templates/home.html
+++ b/templates/home.html
@@ -23,25 +23,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                         
-                            <i class="fa fa-comments feature-icon"></i>Chatbot
+                            Chatbot
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             
-                            <i class="fa fa-paint-brush feature-icon"></i>Image Generation
+                            Image Generation
                         </a>
                     </li>
 					<li class="nav-item">
                         <!-- a class="nav-link" href="/audio_transcript" -->
                             <a class="nav-link" href="#" >
-                            <i class="fa-regular fa-microphone"></i>Audio Transcrip
+                            Audio Transcrip
                         </a>
                     </li>
                     <li class="nav-item">
                         <!-- a class="nav-link" href="/voice_audio" -->
                             <a class="nav-link" href="#" >
-                            <i class="fa-regular fa-microphone"></i>AI Voice over Bytes
+                            AI Voice over Bytes
                         </a>
                     </li>
                     <li class="nav-item dropdown">
@@ -51,7 +51,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                             <a class="dropdown-item" href="/profile_view">Profile</a>
                             <a class="dropdown-item" href="/logout">
-                                <i class="fa fa-sign-out"></i> Logout
+                                 Logout
                             </a>
                         </div>
                     </li>
