--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - GenAI</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="about_us.html">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/about_us.css') }}">
     
 </head>
 <body>
