--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,6 +4,7 @@ html{
 
 body {
     padding-top: 56px;
+    overflow: hidden;
 }
 nav{
     background: #333;
@@ -44,6 +45,7 @@ nav{
     text-align: center;
     padding: 10px 0;
 }
+
     
 .cover-container {
     max-width: 42em;
@@ -54,98 +56,7 @@ nav{
 .lead {
         font-weight: 300;
 }
-.card-1{
-    width: 430px;
-    height: 340px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-     border: 1px solid rgba(255, 255, 255, .25);
-    border-radius: 20px;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-    transition: all .1s ease-in-out;
-   
-  }
-  .card-1:hover{
-    border:3px solid #333;
-    
-  }
-  .card-main-content{
-    margin-top: -50px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-  }
-  .card-cotainer-1 {
-    margin: 30px; 
-    padding: 30px;
-    display: flex;
-    justify-content: space-around;
-    
-}
- .card-image-1 img{
-    width: 100%;
-    padding: 3px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    transition: filter 0.9s ease;
-}
-.card-image-1 img:hover {
-    filter: blur(.9px); 
-    opacity: 0.9; 
-    cursor: pointer;
-}
 
-.lead-card-btn .btn-secondary{
-    width: 100px;
-    border-radius: 50px;
-    font-size: small;
-    
-    
-}
-.card-image-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
- 
-  .card-content{
-    width: 800px;
-    height: auto;
-    margin-top: 30px;
-    
-}
-.popup{
-    background: rgb(0, 0, 0,0.6);
-    width:100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.popup-content{
-    height: 250px;
-    width: 500px;
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    position: relative;
-}
-i  {
-    position: absolute;
-    top: -5px;
-    right: -6px;
-    font-size: 30px;
-    color: black;
-}
-i:hover{
-    color: orange;
-    cursor: pointer;
-}
 .lead-card-btn-h1{
     margin-bottom:40px;
 }
@@ -255,3 +166,78 @@ i:hover{
         
     }
   }
+
+  /*demoooo */
+
+
+ .testimonial-wrapper{
+    position: relative;
+    top: -30px;
+    width: 60%;
+    height: auto;
+    margin-left:300px ;
+   
+}
+.testimonial-wrapper .testimonial-box{
+    
+    padding: 3rem;
+    border-radius: 2rem;
+    overflow: hidden;
+}
+.testimonial-content .testimonial-slide{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    background: white;
+    border-radius: 2rem;
+    box-shadow: 0 .1rem .5rem rgba(0,0,0,.04);
+    padding: 3rem 5rem;
+    border-top: .8rem solid #333;
+    border-bottom: .8rem solid #333;
+}
+.testimonial-slide img{
+    width: 14rem;
+    height: 14rem;
+    object-fit: cover;
+    border-radius:14px;
+    padding: 2px;
+    border: 2px solid #333;
+    transition: box-shadow 0.3s ease;
+  
+  
+}
+.testimonial-slide-headings{
+    margin-left: 15%;
+}
+.testimonial-slide img:hover{
+     cursor: pointer;
+     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+.testimonial-slide h2{
+    font-size: 2.5rem;
+    margin: 2rem 0;
+}
+
+.testimonial-slide p{
+    font-size: 1.4rem;
+    text-align: center;
+}
+.testimonial-box .swiper-button-next,
+.testimonial-box .swiper-button-prev{
+    color:#333;
+}
+.testimonial-box .swiper-button-next{
+    right: 0;
+}
+.testimonial-box .swiper-button-prev{
+    left: 0;
+}
+.testimonial-box .swiper-pagination-bullet{
+    background:#333;
+    
+
+}
+.testimonial-box .swiper-pagination-bullet-active{
+    background: #333;
+}
