--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    
+
   
     <title>Home</title>
     
@@ -60,14 +63,7 @@
         </div>
     </nav>
 
-    <!------------------- Page Content--------------- -->
-                        <!----- <div class="container">
-                                <div class="row justify-content-center mt-5">
-                                    <div class="col-md-6">
-                                        <h1>Welcome to the home page, {{ username }}!</h1>
-                                    </div>
-                                </div>
-                            </div>------>
+  
 
 
     <div class="container text-center">
@@ -75,118 +71,69 @@
             <main role="main" class="inner cover">
                 <h1 class="cover-heading">Welcome to GenAI</h1>
                 <p class="lead">Your gateway to the future of generative artificial intelligence, where creativity meets technology. Explore the boundless possibilities of AI in generating content, art, and solutions.</p>
-                <!---<p class="lead">
-                    <a href="#" class="btn btn-lg btn-secondary">Learn More</a>
-                </p>---->
+                
             </main>
         </div>
     </div>
 
-       <!-------------card1-------------------->
-       <div class="card-main-content">
-        <div class="card-cotainer-1 card-container-11">
+       <!-------------cardssss-------------------->       
 
-           
-            <div class="card-1">
-                <div class="card-image-1">
-                    <img style="height: 240px;"  src="../static/BGimage/legal_assistance.png" alt="">
-                </div>
-                <div class="card-image-content">
-                    <h4>Legal Assistance</h4>
-                    <p class="lead-card-btn">
-                        <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Chat Bot</a>
-                    </p>
+     
 
-                </div>
-            </div>
-            <div class="card-content">
-                <h1>Legal Assistance</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
-               
-            </div>
-        </div>
-
-         <!-------------card2-------------------->
-
-         <div class="card-cotainer-1 ">
-
-           
-            <div class="card-content">
-                <h1>Image Generation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
-                
-            </div>
-
-            <div class="card-1">
-                <div class="card-image-1">
-                    <img style="height: 240px;" src="../static/BGimage/image_gen.png" alt="">
-                </div>
-                <div class="card-image-content">
-                    <h4>Image Generation</h4>
-                    <p class="lead-card-btn">
-                        <a href="image_gen" class="btn btn-lg btn-secondary " id="card-1-btn-2" >Image Gen</a>
-                    </p>
-
-                </div>
-                
-            </div>
-
-        </div>
-
-         <!-------------card3-------------------->
-        <div class="card-cotainer-1 card-container-3">
-
-           
-            <div class="card-1">
-                <div class="card-image-1">
-                    <img  style="height: 240px;" src="../static/BGimage/audio_trans.png" alt="">
-                </div>
-                <div class="card-image-content">
-                    <h4>Audio Transcript</h4>
-                    <p class="lead-card-btn">
-                        <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
-                    </p>
-                </div>
-                
-            </div>
-            <div class="card-content">
-                <h1>Audio Transcript</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
-                
-            </div>
-        </div>
-
-         <!-------------card4-------------------->
-
-         <div class="card-cotainer-1 ">
-
-           
-            <div class="card-content">
-                <h1>AI Voice Over Bytes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium quis nostrum ipsum obcaecati ut corporis quod. Doloribus atque porro, esse nam quidem laudantium provident delectus quibusdam blanditiis, laborum, commodi placeat.</p>
-                
-            </div>
-
-            <div class="card-1">
-                <div class="card-image-1 card-image-11">
-                    <img src="../static/BGimage/landing_page.jpg" alt="">
-                </div>
-                <div class="card-image-content">
-                    <h4>AI Voice Over Bytes</h4>
-                    <p class="lead-card-btn">
-                        <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
-                    </p>
-
+         
+            
+            <div class="testimonial-wrapper">
+                <div class="testimonial-box mySwiper">
+                    <div class="testimonial-content swiper-wrapper">
+                        <div class="testimonial-slide swiper-slide">
+                            <img style="height: 240px;"  src="../static/BGimage/legal_assistance.png" alt="">
+                         <div class="testimonial-slide-headings"> 
+                            <h2>Legal Assistance</h2>
+                            <p class="lead-card-btn">
+                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Chat Bot</a>
+                            </p>
+                        </div>  
+                         </div>
+                        <div class="testimonial-slide swiper-slide">
+                            <img style="height: 240px;"  src="../static/BGimage/image_gen.png" alt="">
+                                 <div class="testimonial-slide-headings">
+                                    <h2>Image Generation</h2>
+                                    <p class="lead-card-btn">
+                                        <a href="image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2" >Image Gen</a>
+                                    </p>
+                                 </div>
+                            
+                        </div>
+                        <div class="testimonial-slide swiper-slide">
+                            <img  style="height: 240px;" src="../static/BGimage/audio_trans.png" alt="">
+                           <div class="testimonial-slide-headings">
+                            <h2>Audio Transcript</h2>
+                            <p class="lead-card-btn">
+                                <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-3" >Learn More</a>
+                            </p>
+                           </div>
+                            
+                        </div>
+                        <div class="testimonial-slide swiper-slide">
+                            <img src="../static/BGimage/landing_page.jpg" alt="">
+                            <div class="testimonial-slide-headings">
+                                <h2>AI Voice Over </h2>
+                                <p class="lead-card-btn">
+                                    <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
+                                </p>
+                            </div>
+                          
+                         </div>
+                        
+                        
+                        
+                    </div>
+    
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-
-        </div>
-
-    </div>
-
-
-      
-
 
 <footer class="footer">
     <div class="container">
@@ -195,6 +142,29 @@
 </footer>
 
 
+     
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+    slidesPerView: 1,
+    spaceBetween: 50,
+    loop: true,
+    grabCursor:true,
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+    autoplay: {
+        delay: 5000, 
+        disableOnInteraction: false, 
+      },
+  });
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
