removed the above links

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                  <!----  <li class="nav-item">
                         <a class="nav-link" href="#">
                         
                             Chatbot
@@ -36,17 +36,17 @@
                         </a>
                     </li>
 					<li class="nav-item">
-                        <!-- a class="nav-link" href="/audio_transcript" -->
+                       
                             <a class="nav-link" href="#" >
                             Audio Transcrip
                         </a>
                     </li>
                     <li class="nav-item">
-                        <!-- a class="nav-link" href="/voice_audio" -->
+                       
                             <a class="nav-link" href="#" >
                             AI Voice over Bytes
                         </a>
-                    </li>
+                    </li>-->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle profile-dropdown-toggle" href="#" id="navbarDropdownProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ username }}
