--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
                             {{ username }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
-                            <a class="dropdown-item" href="/profile_view">Profile</a>
+                            <a class="dropdown-item" href="/profile_view"  target="_blank">Profile</a>
                             <a class="dropdown-item" href="/logout">
                                  Logout
                             </a>
@@ -90,7 +90,7 @@
                          <div class="testimonial-slide-headings"> 
                             <h2>Legal Assistance</h2>
                             <p class="lead-card-btn">
-                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Chat Bot</a>
+                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1"   target="_blank">Chat Bot</a>
                             </p>
                         </div>  
                          </div>
@@ -99,7 +99,7 @@
                                  <div class="testimonial-slide-headings">
                                     <h2>Image Generation</h2>
                                     <p class="lead-card-btn">
-                                        <a href="image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2" >Image Gen</a>
+                                        <a href="/image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2"  target="_blank" >Image Gen</a>
                                     </p>
                                  </div>
                             
@@ -109,22 +109,24 @@
                            <div class="testimonial-slide-headings">
                             <h2>Audio Transcript</h2>
                             <p class="lead-card-btn">
-                                <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-3" >Learn More</a>
+                                <a href="/audio_trans" class="btn btn-lg btn-secondary" id="card-1-btn-3"  target="_blank" >Audio Transcript</a>
                             </p>
                            </div>
                             
                         </div>
                         <div class="testimonial-slide swiper-slide">
-                            <img src="../static/BGimage/landing_page.jpg" alt="">
+                            <video width="100%" controls autoplay loop>
+                                <source src="../static/BGvideo/BGvideo/ai_caption1.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                             <div class="testimonial-slide-headings">
-                                <h2>AI Voice Over </h2>
+                                <h2>AI Voice Over</h2>
                                 <p class="lead-card-btn">
-                                    <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
+                                    <a href="/ai_caption_voice" class="btn btn-lg btn-secondary" id="card-1-btn-4" target="_blank">AI Caption</a>
                                 </p>
                             </div>
-                          
-                         </div>
-                        
+                        </div>
+                   
                         
                         
                     </div>
