added home href

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -13,13 +13,15 @@
     <div class="container">
         <div id="header" class="text-center my-4">
             <h1>Hi {{username}}!</h1>
+            <a href="/home">GenAI</a>
         </div>
-		
         
         <div class="text-center logo mb-4">
             
-            <h1>LEGAL ASSISTANCE</h1>
+                <h1>LEGAL ASSISTANCE</h1>
+            </a>
         </div>
+        
         
         <div id="chat-container" class="mb-4">
             <div id="chat" class="border p-3 mb-3"></div>
