added new updates

--- a/templates/home.html
+++ b/templates/home.html
@@ -90,7 +90,7 @@
                          <div class="testimonial-slide-headings"> 
                             <h2>Legal Assistance</h2>
                             <p class="lead-card-btn">
-                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1"   target="_blank">Chat Bot</a>
+                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1"   >Chat Bot</a>
                             </p>
                         </div>  
                          </div>
@@ -99,7 +99,7 @@
                                  <div class="testimonial-slide-headings">
                                     <h2>Image Generation</h2>
                                     <p class="lead-card-btn">
-                                        <a href="/image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2"  target="_blank" >Image Gen</a>
+                                        <a href="/image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2"  >Image Gen</a>
                                     </p>
                                  </div>
                             
@@ -109,7 +109,7 @@
                            <div class="testimonial-slide-headings">
                             <h2>Audio Transcript</h2>
                             <p class="lead-card-btn">
-                                <a href="/audio_trans" class="btn btn-lg btn-secondary" id="card-1-btn-3"  target="_blank" >Audio Transcript</a>
+                                <a href="/audio_trans" class="btn btn-lg btn-secondary" id="card-1-btn-3"   >Audio Transcript</a>
                             </p>
                            </div>
                             
@@ -122,7 +122,7 @@
                             <div class="testimonial-slide-headings">
                                 <h2>AI Voice Over</h2>
                                 <p class="lead-card-btn">
-                                    <a href="/ai_caption_voice" class="btn btn-lg btn-secondary" id="card-1-btn-4" target="_blank">AI Caption</a>
+                                    <a href="/ai_caption_voice" class="btn btn-lg btn-secondary" id="card-1-btn-4" >AI Caption</a>
                                 </p>
                             </div>
                         </div>
