--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,11 @@
                 <div class="testimonial-box mySwiper">
                     <div class="testimonial-content swiper-wrapper">
                         <div class="testimonial-slide swiper-slide">
-                            <img src="../static/BGimage/landing_page.jpg" alt="">
+                            
+                            <video width="35%" controls autoplay loop>
+                                <source src="../static/BGvideo/ai_caption.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                             <div class="testimonial-slide-headings">
                                 <h2>AI Voice Over </h2>
                                 <p class="lead-card-btn">
